fixed letter-spacing fonts rules

--- a/packages/vars/src/typography.css
+++ b/packages/vars/src/typography.css
@@ -15,7 +15,7 @@
 @define-mixin typography-display {
   font-size: 60px;
   line-height: 68px;
-  letter-spacing: -0.04em;
+  letter-spacing: -2.5px;
   font-family: var(--font-family-system);
   font-weight: var(--font-weight-xbold);
 }
@@ -24,26 +24,27 @@
   @mixin typography-display;
   font-size: 48px;
   line-height: 56px;
-  letter-spacing: -0.02em;
+  letter-spacing: -2px;
 }
 
 @define-mixin typography-heading-1 {
   font-size: 48px;
   line-height: 56px;
-  letter-spacing: -0.02em;
+  letter-spacing: -2px;
   font-weight: var(--font-weight-bold);
   font-family: var(--font-family-system);
 }
 
 @define-mixin typography-heading-1_mobile {
   @mixin typography-heading-1;
+  letter-spacing: -0.5px;
   font-size: 32px;
   line-height: 40px;
 }
 
 @define-mixin typography-heading-2 {
   font-size: 32px;
-  letter-spacing: -0.02em;
+  letter-spacing: -0.5px;
   font-weight: var(--font-weight-bold);
   font-family: var(--font-family-system);
 }
@@ -55,7 +56,7 @@
 
 @define-mixin typography-heading-3 {
   font-size: 28px;
-  letter-spacing: -0.02em;
+  letter-spacing: -0.5px;
   font-weight: var(--font-weight-bold);
   font-family: var(--font-family-system);
 }
@@ -67,20 +68,19 @@
 
 @define-mixin typography-heading-4 {
   font-size: 24px;
-  letter-spacing: -0.01em;
+  letter-spacing: -0.5px;
   font-weight: var(--font-weight-bold);
   font-family: var(--font-family-system);
 }
 
 @define-mixin typography-heading-4_mobile {
   @mixin typography-heading-4;
+  letter-spacing: 0;
   font-size: 20px;
-  letter-spacing: -0.02em;
 }
 
 @define-mixin typography-heading-5 {
   font-size: 20px;
-  letter-spacing: -0.01em;
   font-weight: var(--font-weight-bold);
   font-family: var(--font-family-system);
 }
@@ -91,7 +91,6 @@
 }
 @define-mixin typography-heading-6 {
   font-size: 16px;
-  letter-spacing: -0.01em;
   font-weight: var(--font-weight-bold);
   font-family: var(--font-family-system);
 }
@@ -177,7 +176,7 @@
 @define-mixin typography-overline-1 {
   font-size: 12px;
   text-transform: uppercase;
-  letter-spacing: 0.04em;
+  letter-spacing: 0.5px;
   font-weight: var(--font-weight-medium);
   font-family: var(--font-family-system);
 }
@@ -185,7 +184,7 @@
 @define-mixin typography-overline-2 {
   font-size: 10px;
   text-transform: uppercase;
-  letter-spacing: 0.04em;
+  letter-spacing: 0.5px;
   font-weight: var(--font-weight-medium);
   font-family: var(--font-family-system);
 }
@@ -195,21 +194,21 @@
 */
 @define-mixin button_large__bold {
   font-size: 16px;
-  font-weight: bold;
-  letter-spacing: 2%;
+  font-weight: 700;
+  letter-spacing: 0.2px;
   font-family: var(--font-family-system);
 }
 
 @define-mixin button_medium__bold {
   font-size: 14px;
-  font-weight: bold;
-  letter-spacing: 2%;
+  font-weight: 700;
+  letter-spacing: 0.2px;
   font-family: var(--font-family-system);
 }
 
 @define-mixin button_small__medium {
   font-size: 12px;
-  font-weight: 500;
-  letter-spacing: 2%;
+  font-weight: 700;
+  letter-spacing: 0.2px;
   font-family: var(--font-family-system);
 }
